# RAG-Research

./: .gitignore  .mcp.json  CITATION.cff  NOTICE  README.md  mkdocs.yml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
agents/: agente-escritor.md  paper-reviewer.md
commands/: review-consistency.md  review-paper.md  review-rewrite.md  review-venue.md  write-methods.md  write-section.md
docs/: index.md
examples/: run_slice.py  run_stamp.py  smoke_extract.py  smoke_full_llm.py  smoke_llm.py  smoke_review_write_e2e.py  smoke_substrate.py
examples/cards/: lee2022echo__nnU-Net.json  zhou2023thyroid__MedSAM-ft.json
examples/sample_code/: train_bad.py  train_good.py
examples/test_papers/: SOURCES.md
src/rag_research/: __init__.py  build.py  claim.py  claimverify.py  cli.py  codewrite.py  consistency.py  delivery.py  draft.py  extract.py  litreview.py  llm.py  mcp_server.py  references.py  report.py  speccard.py  substrate.py
src/specrag/: __init__.py  build.py  cli.py  codegen.py  extract.py  llm.py  mcp_server.py  speccard.py  substrate.py  verify.py
tests/: test_build.py  test_claim.py  test_claimverify.py  test_codegen.py  test_codewrite.py  test_consistency.py  test_delivery.py  test_draft.py  test_extract.py  test_integration.py  test_litreview.py  test_llm.py  test_mcp.py  test_references.py  test_report.py  test_speccard.py  test_substrate.py  test_verify.py
