[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specrag"
version = "0.0.1"
description = "Reproducibility-consistency verification of ML code against papers — a grounded linter on top of PaperQA2."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Rodrigo Medina" }]
keywords = ["rag", "reproducibility", "ml", "papers", "verification", "paperqa"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
# CORE is light: the verify engine operates on self-sufficient spec-cards.
# The LLM judge for semantic fields is dependency-injected (no heavy dep in core).
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
# Heavy substrate: PaperQA2 for extraction + retrieval (only needed beyond the verify core).
paperqa = ["paper-qa>=2026.3"]
local = ["paper-qa[local]>=2026.3"]
qdrant = ["paper-qa[qdrant]>=2026.3"]
docling = ["paper-qa[docling]>=2026.3"]
mcp = ["fastmcp>=2.0"]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.10"]
all = ["specrag[paperqa,mcp,api,dev]"]

[project.urls]
Homepage = "https://github.com/rmedina/specrag"
Issues = "https://github.com/rmedina/specrag/issues"

[project.scripts]
specrag = "specrag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/specrag"]

[tool.ruff]
line-length = 100
target-version = "py311"
# intentionally-incomplete code snippets used as verify fixtures
extend-exclude = ["examples/sample_code"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
packages = ["specrag"]
strict = true
